--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -26,7 +26,7 @@ a:hover {
     color: #555;
 }
 .carousel-item1{
-    background-image: url(gfpimg/bg-xl-gfp.jpg);
+    background-image: url(gfpimg/bg-xl-gfp-min.jpg);
     background-size: cover;
 }
 .navbar-light .navbar-brand {
@@ -407,17 +407,17 @@ background-color: red;
     }
 
     .preguntas {
-        background-image: url(gfpimg/bg-xl-gfp-6.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-6-min.jpg);
       background-size: cover;
     }
 
     .nuestra-historia {
-        background-image: url(gfpimg/bg-xl-gfp-7.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-7-min.jpg);
       background-size: cover;
     }
 
     .jumbotron{
-        background-image: url(gfpimg/bg-xl-gfp-4.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-4-min.jpg);
       background-size: cover;
     }
 
@@ -426,11 +426,11 @@ background-color: red;
     padding-left: 4.5rem;
 }
 .nuestra-historia {
-    background-image: url(gfpimg/bg-xl-gfp-7.jpg);
+    background-image: url(gfpimg/bg-xl-gfp-7-min.jpg);
   background-size: cover;
 }
 .preguntas {
-    background-image: url(gfpimg/bg-xl-gfp-6.jpg);
+    background-image: url(gfpimg/bg-xl-gfp-6-min.jpg);
   background-size: cover;
 }
 }
@@ -465,7 +465,7 @@ background-color: red;
     }
 
     .jumbotron {
-        background-image: url(gfpimg/bg-xl-gfp-4.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-4-min.jpg);
      background-size: cover;
     }
 
@@ -563,17 +563,17 @@ background-color: red;
     }
 
     .jumbotron {
-        background-image: url(gfpimg/bg-xl-gfp-4.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-4-min.jpg);
         background-size: cover;
     }
     .preguntas {
-        background-image: url(gfpimg/bg-xl-gfp-6.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-6-min.jpg);
       background-size: cover;
       color: white;
     }
 
     .nuestra-historia {
-        background-image: url(gfpimg/bg-xl-gfp-7.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-7-min.jpg);
       background-size: cover;
       color: white;
     }
@@ -638,11 +638,11 @@ background-color: red;
         font-size: 1rem;
     }
     .nuestra-historia {
-        background-image: url(gfpimg/bg-xl-gfp-7.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-7-min.jpg);
       background-size: cover;
     }
     .preguntas {
-        background-image: url(gfpimg/bg-xl-gfp-6.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-6-min.jpg);
       background-size: cover;
     }
 }
@@ -732,16 +732,16 @@ background-color: red;
 }
     @media (min-width: 1000px) {
         .jumbotron {
-            background-image: url(gfpimg/bg-xl-gfp-4.jpg);
+            background-image: url(gfpimg/bg-xl-gfp-4-min.jpg);
             background-size: cover;
     }
 
     .nuestra-historia {
-        background-image: url(gfpimg/bg-xl-gfp-7.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-7-min.jpg);
       background-size: cover;
     }
     .preguntas {
-        background-image: url(gfpimg/bg-xl-gfp-6.jpg);
+        background-image: url(gfpimg/bg-xl-gfp-6-min.jpg);
       background-size: cover;
     }
 }
