--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -823,10 +823,11 @@ background-color: red;
     .more-info .title {
         position: absolute;
         top: 35px;
-        background: silver;
+        background: white;
         padding: 4px;
-        left: -10rem;
+        left: 0rem;
         white-space: nowrap;
+        border: 1px solid black;
       }
     #img-carrouse-mobile{
         display: none;
