--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -819,7 +819,7 @@ background-color: red;
         text-align: left;
     }
 }
-@media (max-width:630px){
+@media (max-width:765px){
     .more-info .title {
         position: absolute;
         top: 35px;
@@ -829,6 +829,9 @@ background-color: red;
         white-space: nowrap;
         border: 1px solid black;
       }
+}
+@media (max-width:630px){
+  
     #img-carrouse-mobile{
         display: none;
         /* height: 15rem;
