--- a/gofoodpro.css
+++ b/gofoodpro.css
@@ -735,7 +735,9 @@ background-color: red;
             background-image: url(gfpimg/bg-xl-gfp-4-min.jpg);
             background-size: cover;
     }
-
+    .modal-dialog {
+        max-width: 614px;
+    }
     .nuestra-historia {
         background-image: url(gfpimg/bg-xl-gfp-7-min.jpg);
       background-size: cover;
@@ -746,6 +748,18 @@ background-color: red;
     }
 }
 @media (max-width:936px){
+    .modal-dialog span{
+        font-size: 2rem;
+    }
+    .modal-dialog .delete-product{
+        font-size: 1.5rem;
+    }
+    .modal-dialog p{
+        font-size: 1.5rem;
+        position: relative;
+        top: 0.4rem;
+        margin: 0px 0.5rem 1rem;
+    }
     .nav-item{
         width: 10rem;
     }
